<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"

     android:layout_width = "match_parent"
     android:layout_height = "match_parent" >
  <RelativeLayout
      android:layout_width = "wrap_content"
      android:layout_height = "wrap_content"
      android:background = "@color/colorTransparentWhite"

      >
      <LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"

          android:id = "@+id/quiz_layout"
          style = "@style/layout_style"
          android:layout_width = "match_parent"
          android:layout_height = "match_parent"
          android:orientation = "vertical"
          android:paddingBottom = "@dimen/_20dp"
          android:paddingLeft = "@dimen/_20dp"
          android:paddingRight = "@dimen/_20dp"
          android:paddingTop = "@dimen/_20dp" >

          <TextView
              android:id = "@+id/question1"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question1"

              android:textSize = "@dimen/_18sp" />

          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question1_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question1_choice1" />

              <RadioButton
                  android:id = "@+id/question1_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question1_choice2" />

              <RadioButton
                  android:id = "@+id/question1_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question1_choice3" />
              <RadioButton
                  android:id = "@+id/question1_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question1_choice4" />
          </RadioGroup >

          <TextView
              android:id = "@+id/question2"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:labelFor = "@+id/question2_answer"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question2"

              android:textSize = "@dimen/_18sp" />

          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question2_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question2_choice1" />

              <RadioButton
                  android:id = "@+id/question2_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question2_choice2" />

              <RadioButton
                  android:id = "@+id/question2_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question2_choice3" />
              <RadioButton
                  android:id = "@+id/question2_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question2_choice4" />
          </RadioGroup >

          <TextView
              android:id = "@+id/question3"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question3"

              android:textSize = "@dimen/_18sp" />

          <CheckBox
              android:id = "@+id/question3_choice1"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question3_choice1" />

          <CheckBox
              android:id = "@+id/question3_choice2"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question3_choice2" />

          <CheckBox
              android:id = "@+id/question3_choice3"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question3_choice3" />

          <CheckBox
              android:id = "@+id/question3_choice4"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question3_choice4" />

          <TextView
              android:id = "@+id/question4"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:labelFor = "@+id/question4_answer"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question4"

              android:textSize = "@dimen/_18sp" />


          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question4_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question4_choice1" />

              <RadioButton
                  android:id = "@+id/question4_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question4_choice2" />

              <RadioButton
                  android:id = "@+id/question4_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question4_choice3" />
              <RadioButton
                  android:id = "@+id/question4_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:checked = "false"
                  android:text = "@string/question4_choice4" />
          </RadioGroup >

          <TextView
              android:id = "@+id/question5"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question5"

              android:textSize = "@dimen/_18sp" />

          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question5_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question5_choice1" />

              <RadioButton
                  android:id = "@+id/question5_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question5_choice2" />

              <RadioButton
                  android:id = "@+id/question5_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question5_choice3" />
              <RadioButton
                  android:id = "@+id/question5_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question5_choice4" />
          </RadioGroup >


          <TextView
              android:id = "@+id/question6"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:labelFor = "@+id/question5_answer"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question6"

              android:textSize = "@dimen/_18sp" />
          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question6_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question6_choice1" />

              <RadioButton
                  android:id = "@+id/question6_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question6_choice2" />

              <RadioButton
                  android:id = "@+id/question6_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question6_choice3" />
              <RadioButton
                  android:id = "@+id/question6_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question6_choice4" />
          </RadioGroup >







          <TextView
              android:id = "@+id/question7"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question7"

              android:textSize = "@dimen/_18sp" />


          <CheckBox
              android:id = "@+id/question7_choice1"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question7_choice1" />

          <CheckBox
              android:id = "@+id/question7_choice2"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question7_choice2" />

          <CheckBox
              android:id = "@+id/question7_choice3"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question7_choice3" />

          <CheckBox
              android:id = "@+id/question7_choice4"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:text = "@string/question7_choice4" />


          <TextView
              android:id = "@+id/question8"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:labelFor = "@+id/question8_answer"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question8"

              android:textSize = "@dimen/_18sp" />
          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question8_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question8_choice1" />

              <RadioButton
                  android:id = "@+id/question8_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question8_choice2" />

              <RadioButton
                  android:id = "@+id/question8_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question8_choice3" />
              <RadioButton
                  android:id = "@+id/question8_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question8_choice4" />
          </RadioGroup >



          <TextView
              android:id = "@+id/question9"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question9"

              android:textSize = "@dimen/_18sp" />

          <EditText
              android:id = "@+id/editText"
              android:layout_width = "match_parent"
              android:layout_height = "wrap_content"
              android:ems = "10"
              android:hint = "@string/hint"
              android:inputType = "textPersonName" />
          <TextView
              android:id = "@+id/question10"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:labelFor = "@+id/question10_answer"
              android:paddingTop = "@dimen/_20dp"
              android:text = "@string/question10"

              android:textSize = "@dimen/_18sp" />

          <RadioGroup xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "fill_parent"
              android:layout_height = "wrap_content"
              android:orientation = "vertical" >

              <RadioButton
                  android:id = "@+id/question10_choice1"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question10_choice1" />

              <RadioButton
                  android:id = "@+id/question10_choice2"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question10_choice2" />
              <RadioButton
                  android:id = "@+id/question10_choice3"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question10_choice3" />

              <RadioButton
                  android:id = "@+id/question10_choice4"
                  android:layout_width = "wrap_content"
                  android:layout_height = "wrap_content"
                  android:text = "@string/question10_choice4" />

          </RadioGroup >

          <Button
              android:id = "@+id/submit_answers"
              style = "@style/button_style"
              android:layout_width = "wrap_content"
              android:layout_height = "wrap_content"
              android:onClick = "submitAnswers"
              android:text = "@string/submit_answers" />

      </LinearLayout >
  </RelativeLayout >

    </ScrollView >

